--- a/style.css
+++ b/style.css
@@ -20,13 +20,54 @@ img {
 	margin-top: 5em;
 }
 
+.pun {
+	font-style: italic;
+	font-size: .8em;
+	font-family: 'Times New Roman', Times, serif;
+}
+
 a {
-	font-size: 0.8em;
-	transform: rotate(90deg)
+	font-size: .7em;
+	outline: none;
+  	text-decoration: none;
+  	padding: 2px 1px 0;
+}
+
+a:link {
+	color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:focus {
+	border-bottom: 1px solid;
+  	background: red;
+}
+
+a:hover {
+	border-bottom: 1px solid;
+  	background: grey;
+}
+
+a:active {
+	background: orchid;
+  	color: yellow;
+}
+
+.rotate {
+	writing-mode: vertical-lr;
+	margin-right: 16em;
+	font-size: .7em;
+}
+
+.from-top {
+	margin-top: 6em;
 }
 
 .wrapper {
   	display: grid;
 	grid-template-columns: 2fr repeat(2, 1fr);
-	column-gap: 1em;
+	column-gap: .5em;
 }
