--- a/style.css
+++ b/style.css
@@ -1,40 +1,40 @@
 body {
-	text-align: center;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	background-color: darkgrey;
+text-align: center;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+background-color: darkgrey;
 }
 
 h1 {
-	font-size: 1.5em;
-	padding: 0;
-	margin: 0;
+font-size: 1.5em;
+padding: 0;
+margin: 0;
 }
 
 h2 {
-	font-size: 1em;
-	padding: 0;
-	margin: 0;
+font-size: 1em;
+padding: 0;
+margin: 0;
 }
 
 img {
-	margin-top: 5em;
+margin-top: 3em;
 }
 
 .pun {
-	font-style: italic;
-	font-size: .8em;
-	font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    font-size: .8em;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 a {
-	font-size: .7em;
-	outline: none;
-  	text-decoration: none;
-  	padding: 2px 1px 0;
+    font-size: .7em;
+    outline: none;
+    text-decoration: none;
+    padding: 2px 1px 0;
 }
 
 a:link {
-	color: black;
+    color: black;
 }
 
 a:visited {
@@ -42,32 +42,36 @@ a:visited {
 }
 
 a:focus {
-	border-bottom: 1px solid;
-  	background: red;
+    border-bottom: 1px solid;
+    background: red;
+    font-style: bold;
 }
 
 a:hover {
-	border-bottom: 1px solid;
-  	background: grey;
+    border-bottom: 1px solid;
+    background: grey;
+    font-style: bold;
 }
 
 a:active {
-	background: orchid;
-  	color: yellow;
-}
-
-.rotate {
-	writing-mode: vertical-lr;
-	margin-right: 16em;
-	font-size: .7em;
-}
-
-.from-top {
-	margin-top: 6em;
+    background: grey;
+    color: goldenrod;
 }
 
 .wrapper {
-  	display: grid;
-	grid-template-columns: 2fr repeat(2, 1fr);
-	column-gap: .5em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: .5em;
+}
+
+.bordered {
+    border: .2em solid goldenrod;
+    border-radius: 1%;
+    margin-bottom: 2em;
+    padding: 1em;
+    background-color: gainsboro;
+}
+
+.links {
+    font-size: .7em;
 }
