--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a:active {
 
 .wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(5, 1fr);
     column-gap: .5em;
 }
 
@@ -73,5 +73,5 @@ a:active {
 }
 
 .links {
-    font-size: .7em;
+    font-size: .85em;
 }
