Add How to Finish Projects
Something broke with the identifier `c++` in code fences, fixed turning
it into `cpp` :shrug:

--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -100,3 +100,12 @@ a:hover {
 
   line-height: 20px;
 }
+
+blockquote {
+  font: 14px/22px normal helvetica, sans-serif;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  margin-left: 3em;
+  padding-left: 1em;
+  border-left: 0.3em solid #ccc;
+}
