--- a/layouts/default.html
+++ b/layouts/default.html
@@ -11,13 +11,16 @@
   <body>
     <div id="main">
       <h1><%= @item[:title] %></h1>
-      <% if @item.identifier != '/index.md' %>
+      <% if @item[:created_at] %>
       <p>Published: <%= @item[:created_at] %> | tags: <%= tags_for(@item) %></p>
       <% end %>
       <%= yield %>
     </div>
     <div id="sidebar">
       <h2><%= link_to 'Home', '/' %></h2>
+      <h2><%= link_to 'Now', '/now/' %></h2>
+      <h2><%= link_to 'Blog', '/blog/' %></h2>
+      <h2><%= link_to 'About', '/about/' %></h2>
       <hr />
       <h2>Posts</h2>
       <ul>
