--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,13 +1,4 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>ciccarelli.dev - <%= @item[:title] %></title>
-    <link rel="stylesheet" href="/stylesheet.css">
-
-    <!-- Keep this for stats -->
-    <meta name="generator" content="Nanoc <%= Nanoc::VERSION %>">
-  </head>
+<%= render '/partials/head.*' %>
   <body>
     <div id="main">
       <h1><%= @item[:title] %></h1>
@@ -16,19 +7,6 @@
       <% end %>
       <%= yield %>
     </div>
-    <div id="sidebar">
-      <h2><%= link_to 'Home', '/' %></h2>
-      <h2><%= link_to 'Now', '/now/' %></h2>
-      <h2><%= link_to 'Blog', '/blog/' %></h2>
-      <h2><%= link_to 'About', '/about/' %></h2>
-      <hr />
-      <h2>Posts</h2>
-      <ul>
-        <% sorted_articles.each do |post| %>
-          <li><%= link_to post[:title], post.path %></li>
-        <% end %>
-      </ul>
-
-    </div>
+    <%= render '/partials/sidebar.*' %>
   </body>
 </html>
