--- a/layouts/post_list.html
+++ b/layouts/post_list.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>ciccarelli.dev - <%= @item[:title] %></title>
-    <link rel="stylesheet" href="/stylesheet.css" />
-
-    <meta name="generator" content="Nanoc <%= Nanoc::VERSION %>" />
-  </head>
+<%= render '/partials/head.*' %>
   <body>
     <div id="main">
       <h1><%= @item[:title] %></h1>
@@ -20,18 +12,6 @@
       </ul>
     </div>
 
-    <div id="sidebar">
-      <h2><%= link_to 'Home', '/' %></h2>
-      <h2><%= link_to 'Now', '/now/' %></h2>
-      <h2><%= link_to 'Blog', '/blog/' %></h2>
-      <h2><%= link_to 'About', '/about/' %></h2>
-      <hr />
-      <h2>Posts</h2>
-      <ul>
-        <% sorted_articles.each do |post| %>
-        <li><%= link_to post[:title], post.path %></li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render '/partials/sidebar.*' %>
   </body>
 </html>
