--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,6 +2,7 @@
   <h2><%= link_to 'Home', '/' %></h2>
   <h2><%= link_to 'Now', '/now/' %></h2>
   <h2><%= link_to 'Blog', '/blog/' %></h2>
+  <h2><%= link_to 'Projects', '/projects/' %></h2>
   <h2><%= link_to 'About', '/about/' %></h2>
   <hr />
   <h2>Posts</h2>
