--- a/layouts/post_list.html
+++ b/layouts/post_list.html
@@ -12,6 +12,7 @@
         </li>
         <% end %>
       </ul>
+      <%= render '/partials/footer.*' %>
     </div>
 
     <%= render '/partials/sidebar.*' %>
