--- a/content/rouge.css
+++ b/content/rouge.css
@@ -2,9 +2,9 @@
 .highlight table pre { margin: 0; }
 .highlight, .highlight .w {
   color: #fbf1c7;
-  background-color: #282828;
+  background-color: #2e2e2e;
   font-family: 'Courier New', Courier, monospace;
-  padding: 1em;
+  padding: .5em;
 }
 .highlight .err {
   color: #fb4934;
